--- a/index.html
+++ b/index.html
@@ -4,9 +4,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./css/home.css"/>
+    <title>Home Page made by Juha Kärnä</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <p>lol</p>  
+<!-- Navbar Made by Juha Kärnä -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #ccc;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
+      <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">link</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- header coming sooooon by juha Kärnä -->
+
+  <!-- Intro + Hull by Juha Kärnä -->
+  <div class="row" style="margin-top: 18.5vh;">
+    <div class="intro">
+      <p class="introText">Welcome</p>
+    </div>
+
+    <div class="hull">
+      <p class="hullText">lorem ipsum</p>
+    </div>
+  </div>
+
+
+  <!-- footer made by juha Kärnä -->
+  <footer class="bg-light text-center text-lg-start">
+    <!-- Social media -->
+  <section
+  class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+>
+  <!-- Left -->
+  <div class="me-5 d-none d-lg-block">
+    <span>Get connected with us on social networks:</span>
+  </div>
+
+  <!-- Right -->
+  <div>
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-facebook-f"></i>
+    </a>
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-twitter"></i>
+    </a>
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-google"></i>
+    </a>
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-instagram"></i>
+    </a>
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-linkedin"></i>
+    </a>
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-github"></i>
+    </a>
+  </div>
+</section>
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      team7
+    </div>
+  </footer>
+  
 </body>
 </html>
