--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
       <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -32,9 +32,10 @@
     </div>
   </nav>
   <!-- header coming sooooon by juha Kärnä -->
+  <div class="header"> </div>
 
   <!-- Intro + Hull by Juha Kärnä -->
-  <div class="row" style="margin-top: 18.5vh;">
+  <div class="row">
     <div class="intro">
       <p class="introText">Welcome</p>
     </div>
