made header and added content to home.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Navbar Made by Juha Kärnä -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #ccc;">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #D88E35;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
       <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
@@ -20,7 +20,7 @@
           <a class="nav-link active" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="menu.html">Menu</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -37,11 +37,19 @@
   <!-- Intro + Hull by Juha Kärnä -->
   <div class="row">
     <div class="intro">
-      <p class="introText">Welcome</p>
+      <img src="./images/barista.jpg" alt="cream and coffee" style="float: left; height: 100%; width: 30%; margin-left: 1vh;">
+      <p class="introText" style="border-left: solid 1px rgb(0, 0, 0) ;">Welcome to our coffee shop website. <br> We are a small startup bussiness <br> We provide all kinds of services</p>
     </div>
-
+    <div class="hull"> <h1>We provide</h1> </div>
     <div class="hull">
-      <p class="hullText">lorem ipsum</p>
+      <div><img src="./images/food.jpg" alt="food" style="height: 100%; width: 80%;"></div>
+      <div><img src="./images/drinks.jpg" alt="alcohol" style="height: 100%; width: 90%;"></div>
+      <div><img src="./images/cream.jpg" alt="Cream" style="height: 100%; width: 80%;"></div>
+    </div>
+    <div class="hull2">
+    <div>Food/sweats</div>
+    <div>Alcoholic drinks</div>
+    <div>Coffee</div>
     </div>
   </div>
 
@@ -50,7 +58,7 @@
   <footer class="bg-light text-center text-lg-start">
     <!-- Social media -->
   <section
-  class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #D06550;"
 >
   <!-- Left -->
   <div class="me-5 d-none d-lg-block">
