finishing work on the menu page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="row">
     <div class="intro">
       <img src="./images/barista.jpg" alt="cream and coffee" style="float: left; height: 100%; width: 30%; margin-left: 1vh;">
-      <p class="introText" style="border-left: solid 1px rgb(0, 0, 0) ;">Welcome to our coffee shop website. <br> We are a small startup bussiness <br> We provide all kinds of services</p>
+      <p class="introText" style="border-left: solid 1px rgb(0, 0, 0) ;">Welcome to our coffee shop website. <br> We are a small startup business <br> We provide all kinds of services</p>
     </div>
     <div class="hull"> <h1>We provide</h1> </div>
     <div class="hull">
@@ -47,7 +47,7 @@
       <div><img src="./images/cream.jpg" alt="Cream" style="height: 100%; width: 80%;"></div>
     </div>
     <div class="hull2">
-    <div>Food/sweats</div>
+    <div>Food & Sweets</div>
     <div>Alcoholic drinks</div>
     <div>Coffee</div>
     </div>
