--- a/menu.html
+++ b/menu.html
@@ -5,34 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stylemenu.css">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Menu page made by Silja</title>
+    <title>Menu page made by Silja Markku</title>
 </head>
 
 <body>
     <!-- Navbar Made by Juha Kärnä -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #ccc;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
-          <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">link</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-<header>Menu</header>
-      <!--Menu made by Silja Markku-->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #D88E35;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
+        <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="menu.html">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+<header> <h1>Menu</h1></header>
+      <!--Menu page made by Silja Markku-->
     <div class="flexContainer">
         <div class="leftbar">
            <ul style="list-style-type:none;" class="separator">
@@ -114,7 +116,7 @@
   <footer class="bg-light text-center text-lg-start">
     <!-- Social media -->
   <section
-  class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" style="background-color: #D06550;"
 >
   <!-- Left -->
   <div class="me-5 d-none d-lg-block">
