made home.html mobile friendly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #D88E35;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
-      <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav flex-row navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
         </li>
@@ -31,7 +31,7 @@
       </ul>
     </div>
   </nav>
-  <!-- header coming sooooon by juha Kärnä -->
+  <!-- header by juha Kärnä -->
   <div class="header"> </div>
 
   <!-- Intro + Hull by Juha Kärnä -->
