--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="menu.html">Menu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">link</a>
