--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/doge.ico">
 </head>
 <body>
 <!-- Navbar Made by Juha Kärnä -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #D88E35;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
+      <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;"><img src="./images/logo.png" alt="shiba" height="60"> Coffee shop</a>
       <ul class="navbar-nav flex-row navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
