--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="row">
     <div class="intro">
       <img src="./images/barista.jpg" alt="cream and coffee" style="float: left; height: 100%; width: 30%; margin-left: 1vh;">
-      <p class="introText" style="border-left: solid 1px rgb(0, 0, 0) ;">Welcome to our coffee shop website. <br> We are a small startup business <br> We provide all kinds of services</p>
+      <p class="introText" style="border-left: solid 1px rgb(0, 0, 0) ;">Welcome to our coffee shop website. We are a small startup business. <br> We have the best products. We provide all kinds of services <br> Go check our menu for our delicious products <br> You can find us at: <u>Coffee Street 305 14101</u></p>
     </div>
     <div class="hull"> <h1>We provide</h1> </div>
     <div class="hull">
