--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stylemenu.css">
+    <title>Menu page made by Silja Markku</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/doge.ico">
 
     <title>Menu page made by Silja Markku</title>
 </head>
@@ -15,7 +18,7 @@
     <!-- Navbar Made by Juha Kärnä -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #D88E35;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
+        <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;"><img src="./images/logo.png" alt="shiba" height="60"> Coffee shop</a>
         <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
@@ -30,13 +33,14 @@
       </div>
     </nav>
 
+ <!--Menu page made by Silja Markku-->
 <header> <h1>Menu</h1></header>
-      <!--Menu page made by Silja Markku-->
+
     <div class="flexContainer">
         <div class="leftbar">
            <ul style="list-style-type:none;" class="separator">
             <img style="float: right; opacity: .5;" src="images/salad.png" alt="Salad" height="150" >
-            <li><strong><i>Savoury Delicasies</i></strong></li>
+            <li style="font-size: larger;"><strong><i>Savoury Delicasies</i></strong></li>
             <li><strong>Archipelago Bread - 8€</strong> <br>
             with fried breadcheese, honey and some chiaseeds</li>
             <li><strong>Seasonal soup and bread - 10€</strong></li>
@@ -57,13 +61,13 @@
 
            <ul style="list-style-type:none;" class="separator">
             <img style="float: right; opacity: .5;" src="images/toast.png" alt="Toast" height=150" >
-            <li><strong><i>Bartender recommends</i></strong></li>
+            <li style="font-size: larger;"><strong><i>Bartender recommends</i></strong></li>
             <li><strong>Hot Mint Chocolate - 7€</strong></li>
             <li><strong>Gin & Tonic - 8€</strong></li>
             <li><strong>Margarita - 8.50€</strong></li>
             <li><strong>Moscow Mule - 8€</strong></li>
             <li><strong>Champagne</strong><br>
-            12cl - 6€ | 16cl - 8€ | 24cl 12€</li>
+            12cl - 6€ | 16cl - 8€ | 24cl - 12€</li>
             <li><strong>Cognac with coffee - 6.50€</strong></li>
             <li><i>Ask staff more about alcohol free options </i></li>
            </ul>
@@ -74,7 +78,7 @@
             <div class="rightbar">
                 <ul style="list-style-type:none;" class="separator">
                     <img style="float: right; opacity: .5;" src="images/cake.png" alt="Cake" height="150" >
-                    <li><strong><i>Sweets</i></strong></li>
+                    <li style="font-size: larger;"><strong><i>Sweets</i></strong></li>
                     <li><strong>Chocolate cake - 5€</strong> <br>
                     with whipped cream or vanilla icecream</li>
                     <li><strong>Oreo- Whitechocolate brownie - 5€</strong></li>
@@ -91,16 +95,16 @@
                    <p>&nbsp;</p>
                    <img style="float: right; opacity: .5;" src="images/coffee.png" alt="Coffee" height="150" >
                    <ul style="list-style-type:none;" class="separator">
-                    <li><strong><i>Beverages</i></strong></li>
+                    <li style="font-size: larger;"><strong><i>Beverages</i></strong></li>
                     <li><strong>Coffee - 2€ </strong><br>
                     extra cups are free</li>
                     <li><strong>Brewed Tea </strong><br>
                     small pot - 3€ <br>
                     big pot - 4€</li>
-                    <li><strong>Espresso 3€</strong></li>
+                    <li><strong>Espresso - 3€</strong></li>
                     <li><strong>Cappucino - 3.50€</strong></li>
                     <li><strong>Latte / Ice Latte - 4€</strong></li>
-                    <li><strong>Chai Latte 4€</strong></li>
+                    <li><strong>Chai Latte - 4€</strong></li>
                     <li><i>We also have a selection of sodas and juices</i></li>
                    </ul>
 
