--- a/menu.html
+++ b/menu.html
@@ -31,6 +31,7 @@
         </ul>
       </div>
     </nav>
+    <!--Juhas part navbar ends here-->
 
  <!--Menu page made by Silja Markku-->
 <header> <h1>Menu</h1></header>
@@ -39,7 +40,7 @@
         <div class="leftbar">
            <ul style="list-style-type:none;" class="separator">
             <img style="float: right; opacity: .5;" src="images/salad.png" alt="Salad" height="150" >
-            <li style="font-size: larger;"><strong><i>Savoury Delicasies</i></strong></li>
+            <li style="font-size: larger;" ><strong><i>Savoury Delicasies</i></strong></li>
             <li><strong>Archipelago Bread - 8€</strong> <br>
             with fried breadcheese, honey and some chiaseeds</li>
             <li><strong>Seasonal soup and bread - 10€</strong></li>
@@ -59,8 +60,8 @@
            <p>&nbsp;</p>
 
            <ul style="list-style-type:none;" class="separator">
-            <img style="float: right; opacity: .5;" src="images/toast.png" alt="Toast" height=150" >
-            <li style="font-size: larger;"><strong><i>Bartender recommends</i></strong></li>
+            <img style="float: right; opacity: .5;" src="images/toast.png" alt="Toast" height="150">
+            <li style="font-size: larger;" ><strong><i>Bartender recommends</i></strong></li>
             <li><strong>Hot Mint Chocolate - 7€</strong></li>
             <li><strong>Gin & Tonic - 8€</strong></li>
             <li><strong>Margarita - 8.50€</strong></li>
@@ -77,7 +78,7 @@
             <div class="rightbar">
                 <ul style="list-style-type:none;" class="separator">
                     <img style="float: right; opacity: .5;" src="images/cake.png" alt="Cake" height="150" >
-                    <li style="font-size: larger;"><strong><i>Sweets</i></strong></li>
+                    <li style="font-size: larger;" ><strong><i>Sweets</i></strong></li>
                     <li><strong>Chocolate cake - 5€</strong> <br>
                     with whipped cream or vanilla icecream</li>
                     <li><strong>Oreo- Whitechocolate brownie - 5€</strong></li>
@@ -94,7 +95,7 @@
                    <p>&nbsp;</p>
                    <img style="float: right; opacity: .5;" src="images/coffee.png" alt="Coffee" height="150" >
                    <ul style="list-style-type:none;" class="separator">
-                    <li style="font-size: larger;"><strong><i>Beverages</i></strong></li>
+                    <li style="font-size: larger;" ><strong><i>Beverages</i></strong></li>
                     <li><strong>Coffee - 2€ </strong><br>
                     extra cups are free</li>
                     <li><strong>Brewed Tea </strong><br>
@@ -111,6 +112,7 @@
         </div>
     </div>
     <!--Siljas part ends here-->
+
 
     <!-- footer made by juha Kärnä -->
   <footer class="bg-light text-center text-lg-start">
