--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/contact.css">
     <link rel="stylesheet" type="text/css" href="css/home.css">
+    <link rel="icon" href="images/doge.ico">
 
     
     
@@ -17,7 +18,7 @@
 <!-- Navbar Made by Juha Kärnä -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #D88E35;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;">Logo</a>
+    <a class="navbar-brand" href="#" style="font-size: 3.5vh; font-weight: bold;"><img src="./images/logo.png" alt="shiba" height="60"> Coffee shop</a>
     <ul class="navbar-nav navbar-nav ms-auto mb-2 mb-lg-0">
       <li class="nav-item">
         <a class="nav-link active" href="index.html">Home</a>
@@ -28,13 +29,11 @@
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contact Us</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">link</a>
-      </li>
     </ul>
   </div>
 </nav>
 
+<!--map and information made by Tea Lyytinen-->
 <div class="mapandinformation">
 <div class="mapBox"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1984.6781386925563!2d24.927755916012984!3d60.16950705041559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46920a3484b8a4b1%3A0x6af18102816fa62a!2sFredrikinkatu%2065%2C%2000100%20Helsinki!5e0!3m2!1sfi!2sfi!4v1643308124802!5m2!1sfi!2sfi" 
   width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
