--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Menu page">
+    <meta name="keywords" content="Coffee shop, Menu, Contact Us">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/stylemenu.css">
     <title>Menu page made by Silja Markku</title>
