finished making index mobile friendly fixed bugs

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
   <div class="header"> </div>
 
   <!-- Intro + Hull by Juha Kärnä -->
-  <div class="row">
+  
     <div class="intro">
       <img src="./images/barista.jpg" alt="cream and coffee" style="float: left; height: 100%; width: 30%; margin-left: 1vh;">
-      <p class="introText" style="border-left: solid 1px rgb(0, 0, 0) ;">Welcome to our coffee shop website. We are a small startup business. <br> We have the best products. We provide all kinds of services <br> Go check our menu for our delicious products <br> You can find us at: <u>Coffee Street 305 14101</u></p>
+      <p class="introText" style="border-left: solid 1px rgb(0, 0, 0) ;">Welcome to our coffee shop website. We are a small startup business. <br> We have the best products. We provide all kinds of services <br> Go check our menu for our delicious products <br> You can find us at: <u>Fredrikinkatu 65</u> <br> More info about where you can contact us you can find on the "contact us" page.</p>
     </div>
+
     <div class="hull"> <h1>We provide</h1> </div>
     <div class="hull">
       <div><img src="./images/food.jpg" alt="food" style="height: 100%; width: 80%;"></div>
@@ -49,12 +50,10 @@
       <div><img src="./images/cream.jpg" alt="Cream" style="height: 100%; width: 80%;"></div>
     </div>
     <div class="hull2">
-    <div>Food & Sweets</div>
-    <div>Alcoholic drinks</div>
-    <div>Coffee</div>
+      <div>Food & Sweets</div>
+      <div>Alcoholic drinks</div>
+      <div>Coffee</div>
     </div>
-  </div>
-
 
   <!-- footer made by juha Kärnä -->
   <footer class="bg-light text-center text-lg-start">
