fixed final errors and added mobile friendlines

--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
     <div class="flexContainer">
         <div class="leftbar">
            <ul style="list-style-type:none;" class="separator">
-            <img style="float: right; opacity: .5;" src="images/salad.png" alt="Salad" height="150" >
+            <li> <img style="float: right; opacity: .5;" src="images/salad.png" alt="Salad" height="150" > </li>
             <li style="font-size: larger;" ><strong><i>Savoury Delicasies</i></strong></li>
             <li><strong>Archipelago Bread - 8€</strong> <br>
             with fried breadcheese, honey and some chiaseeds</li>
@@ -62,7 +62,7 @@
            <p>&nbsp;</p>
 
            <ul style="list-style-type:none;" class="separator">
-            <img style="float: right; opacity: .5;" src="images/toast.png" alt="Toast" height="150">
+            <li><img style="float: right; opacity: .5;" src="images/toast.png" alt="Toast" height="150"></li>
             <li style="font-size: larger;" ><strong><i>Bartender recommends</i></strong></li>
             <li><strong>Hot Mint Chocolate - 7€</strong></li>
             <li><strong>Gin & Tonic - 8€</strong></li>
@@ -79,7 +79,9 @@
         <div class="flexContainer">
             <div class="rightbar">
                 <ul style="list-style-type:none;" class="separator">
-                    <img style="float: right; opacity: .5;" src="images/cake.png" alt="Cake" height="150" >
+                  <li>
+                  <img style="float: right; opacity: .5;" src="images/cake.png" alt="Cake" height="150" >
+                  </li>
                     <li style="font-size: larger;" ><strong><i>Sweets</i></strong></li>
                     <li><strong>Chocolate cake - 5€</strong> <br>
                     with whipped cream or vanilla icecream</li>
