--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,13 @@
     <p>Monday-Thursday: 12:00-19:00</p>
     <p>Friday-Sunday: 12:00-23:00</p>
 
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-facebook-f"></i>
+    </a>
+    <a href="" class="me-4 text-reset">
+      <i class="fa fa-instagram"></i>
+    </a>
+
   </div>
 </div>
 
