edit send button

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 <input type="email" class="contact-form-text" placeholder="Email">
 <input type="text" class="contact-form-text" placeholder="Phone Number">
 <textarea class="contact-form-text" placeholder="Message"></textarea>
-<input type="submit" class="contact-form-button" value="Send">
+<input type="submit" class="contact-form-button" value="SEND">
             
   </form>
 </div>
